tests/baselines/reference/collisionExportsRequireAndEnum.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
collisionExportsRequireAndEnum_externalmodule.ts(1,13): error TS2441: Duplicate identifier 'require'. Compiler reserves name 'require' in top level scope of a module.
collisionExportsRequireAndEnum_externalmodule.ts(5,13): error TS2441: Duplicate identifier 'exports'. Compiler reserves name 'exports' in top level scope of a module.


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== collisionExportsRequireAndEnum_externalmodule.ts (2 errors) ====
    export enum require { // Error
                ~~~~~~~
!!! error TS2441: Duplicate identifier 'require'. Compiler reserves name 'require' in top level scope of a module.
        _thisVal1,
        _thisVal2,
    }
    export enum exports { // Error
                ~~~~~~~
!!! error TS2441: Duplicate identifier 'exports'. Compiler reserves name 'exports' in top level scope of a module.
        _thisVal1,
        _thisVal2,
    }
    namespace m1 {
        enum require {
            _thisVal1,
            _thisVal2,
        }
        enum exports {
            _thisVal1,
            _thisVal2,
        }
    }
    namespace m2 {
        export enum require { 
            _thisVal1,
            _thisVal2,
        }
        export enum exports {
            _thisVal1,
            _thisVal2,
        }
    }
    
==== collisionExportsRequireAndEnum_globalFile.ts (0 errors) ====
    enum require {
        _thisVal1,
        _thisVal2,
    }
    enum exports {
        _thisVal1,
        _thisVal2,
    }
    namespace m3 {
        enum require {
            _thisVal1,
            _thisVal2,
        }
        enum exports {
            _thisVal1,
            _thisVal2,
        }
    }
    namespace m4 {
        export enum require {
            _thisVal1,
            _thisVal2,
        }
        export enum exports {
            _thisVal1,
            _thisVal2,
        }
    }